# Benchmark

./: .gitignore  CMakeLists.txt  vcpkg.json
bench/: bench_allocation.cpp  bench_branch_prediction.cpp  bench_cache.cpp  bench_copy.cpp  bench_dot.cpp  bench_magnitude.cpp  bench_mat_inverse.cpp  bench_mul_mat4.cpp  bench_parse_int.cpp  bench_planet.cpp  bench_vector_vs_list.cpp  bench_vtable.cpp
include/: bench_utils.h  instrinsics.h  math_utils.h  matrix3.h  matrix4.h  planet.h  random_fill.h  shape.h  vector3.h  vector4.h  vectorize.h
src/: bench_utils.cpp  matrix3.cpp  matrix4.cpp  planet.cpp  shape.cpp  vector3.cpp  vector4.cpp  vectorize.cpp
test/: matrix_test.cpp
